--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=devuser_retaildatadb
+spring.datasource.username=devuser
 spring.datasource.password=xxxxxx
 spring.datasource.url=jdbc:mysql://localhost:3306/retaildatadb?createDatabaseIfNotExist=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
