--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.sgglabs.retail</groupId>
-    <artifactId>retaildatascan</artifactId>
+    <artifactId>retaildata-scan</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>retaildatascan</name>
-    <!-- FIXME change it to the project's website -->
+    <name>retaildata-scan</name>
     <url>http://www.sgglabs.com/retaildatascan</url>
     <description>Set of implementation to scan the retail data on web</description>
 
@@ -20,6 +19,13 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>localRepository</id>
+            <url>file://D:/HM/Applications/Apache/maven/build-lib-repo/</url>
+        </repository>
+    </repositories>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -55,6 +61,11 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.11.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sgglabs.retail</groupId>
+            <artifactId>retaildata-model</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
