1. Converted the html strings into static constants 2. Configurable message service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ logging.level=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.com.sgglabs=DEBUG
 logging.pattern.console=[%-5level] [%thread] %d{yyyy-MM-dd HH:mm:ss.SSS} %logger{36} - %msg%n
+
+##Application specific properties
+app.mq.rest.api.url=http://localhost:8161/api/message/SearchResultQ\
+  ?type=queue&clientId=retaildatascan&_class=com.sgglabs.retail.model.dto.ProductSearchResultDTO
+app.mq.rest.api.auth.username=mqadmin
+app.mq.rest.api.auth.password=mqadmin123
+
+####Application specific constants declarations
+app.const.base64.encode.charset=US-ASCII
